--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,160 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+.banner {
+  width: 100%;
+  height: 50vh;
+  padding: 0 10%;
 }
-
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
-}
-
-.main {
+.banner .bannerWrapper {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
+}
+.title {
+  width: 48%;
+  text-align: center;
+  font-size: var(--title-1);
+  font-weight: bold;
+  background: linear-gradient(
+    90deg,
+    var(--background),
+    var(--grey),
+    var(--black)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 30px;
+}
+.description {
+  width: 80%;
+  text-align: center;
+  color: var(--white);
+  font-size: var(--paragraph-2);
+  font-weight: normal;
+  margin-bottom: 90px;
+}
+.cta {
+  font-size: var(--paragraph-3);
+  color: var(--black);
+  font-weight: 400;
+  padding: 12px 30px;
+  border: 0.5px solid var(--grey);
+  border-radius: 25px;
+  cursor: pointer;
+  background-color: var(--white);
+}.cta:hover{
+  background-color: var(--grey);
+}
+.linkIcon{
+  width: 14px;
+  height: 14px;
+  position: relative;
+  top: 2px;
+  left: 5px;
 }
 
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
+.genres{
+  width: 100%;
+  height: 17vh;
   display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
+  justify-content: center;
   align-items: center;
-  gap: 8px;
+  overflow: hidden;
+  white-space: nowrap;
+  border-top: 1px solid rgba(174, 174, 174, .1);
+  border-bottom: 1px solid rgba(174, 174, 174, .1);
+  margin-bottom: 20px;
+  background-color: var(--black);
+}
+.genres ul{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 50px;
+  animation: marquee 30s linear infinite;
+}
+.genres li{
+  list-style: none;
+  color: var(--grey);
+  font-size: var(--title-4);
+  font-weight: bold;
 }
 
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
   }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  100% {
+    transform: translateX(-100%);
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.steps{
+  width: 100%;
+  padding: 2% 15%;
 }
+.stepsWrapper{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.stepsWrapper h2{
+  width: 50%;
+  text-align: center;
+  font-size: var(--title-4);
+  font-weight: normal;
+  background: linear-gradient(
+    90deg,
+    var(--background),
+    var(--grey),
+    var(--black)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.stepsWrapper .stepsSign{
+  padding: 9px 20px;
+  font-size: var(--paragraph-3);
+  color: var(--black);
+  border-radius: 20px;
+  position: relative;
+  bottom: -75px;
+  rotate: -10deg;
+  background-color: var(--white);
+}
+
+.stepsWrapper .stepsContent{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+  padding: 60px 0 100px 0;
+  border-top: .5px solid rgba(174, 174, 174, .1);
+}
+.stepsContent .stepCard{
+  width: 18%;
+}
+.stepCard .stepIcon{
+  color: var(--white);
+  width: 32px;
+  height: 32px;
+  margin-bottom: 25px;
+}
+.stepCard h3{
+  font-size: var(--paragraph-2);
+  font-weight: 400;
+  color: var(--white);
+  margin-bottom: 15px;
+}
+.stepCard p{
+  font-size: var(--paragraph-3);
+  font-weight: 300;
+  color: var(--white);
+}
+
