--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --paragraph-1: 18px;
   --paragraph-2: 16px;
   --paragraph-3: 14px;
+  --paragraph-4: 12px;
   --title-1: 56px;
   --title-2: 48px; 
   --title-3: 36px;
