--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -27,13 +27,16 @@
   -webkit-text-fill-color: transparent;
   margin-bottom: 30px;
 }
-.description {
+.description, .description2 {
   width: 80%;
   text-align: center;
   color: var(--white);
   font-size: var(--paragraph-2);
   font-weight: normal;
-  margin-bottom: 90px;
+  margin-bottom: 50px;
+}
+.description2{
+  display: none;
 }
 .cta {
   font-size: var(--paragraph-3);
@@ -44,10 +47,11 @@
   border-radius: 25px;
   cursor: pointer;
   background-color: var(--white);
-}.cta:hover{
+}
+.cta:hover {
   background-color: var(--grey);
 }
-.linkIcon{
+.linkIcon {
   width: 14px;
   height: 14px;
   position: relative;
@@ -55,7 +59,7 @@
   left: 5px;
 }
 
-.genres{
+.genres {
   width: 100%;
   height: 17vh;
   display: flex;
@@ -63,19 +67,18 @@
   align-items: center;
   overflow: hidden;
   white-space: nowrap;
-  border-top: 1px solid rgba(174, 174, 174, .1);
-  border-bottom: 1px solid rgba(174, 174, 174, .1);
+  border-top: 1px solid rgba(174, 174, 174, 0.1);
+  border-bottom: 1px solid rgba(174, 174, 174, 0.1);
   margin-bottom: 20px;
   background-color: var(--black);
 }
-.genres ul{
-  width: 100%;
+.genres ul {
+  width: max-content; /* Garante que a largura se ajuste ao conteúdo total */
   display: flex;
-  justify-content: space-evenly;
   gap: 50px;
   animation: marquee 30s linear infinite;
 }
-.genres li{
+.genres li {
   list-style: none;
   color: var(--grey);
   font-size: var(--title-4);
@@ -84,18 +87,18 @@
 
 @keyframes marquee {
   0% {
-    transform: translateX(100%);
+    transform: translateX(0);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
 
-.steps{
+.steps {
   width: 100%;
   padding: 2% 15%;
 }
-.stepsWrapper{
+.stepsWrapper {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -103,7 +106,7 @@
   justify-content: center;
   position: relative;
 }
-.stepsWrapper h2{
+.stepsWrapper h2 {
   width: 50%;
   text-align: center;
   font-size: var(--title-4);
@@ -118,7 +121,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.stepsWrapper .stepsSign{
+.stepsWrapper .stepsSign {
   padding: 9px 20px;
   font-size: var(--paragraph-3);
   color: var(--black);
@@ -129,32 +132,81 @@
   background-color: var(--white);
 }
 
-.stepsWrapper .stepsContent{
+.stepsWrapper .stepsContent {
   width: 100%;
   display: flex;
   justify-content: space-between;
   margin-top: 60px;
   padding: 60px 0 100px 0;
-  border-top: .5px solid rgba(174, 174, 174, .1);
+  border-top: 0.5px solid rgba(174, 174, 174, 0.1);
 }
-.stepsContent .stepCard{
+.stepsContent .stepCard {
   width: 18%;
 }
-.stepCard .stepIcon{
+.stepCard .stepIcon {
   color: var(--white);
   width: 32px;
   height: 32px;
   margin-bottom: 25px;
 }
-.stepCard h3{
+.stepCard h3 {
   font-size: var(--paragraph-2);
   font-weight: 400;
   color: var(--white);
   margin-bottom: 15px;
 }
-.stepCard p{
+.stepCard p {
   font-size: var(--paragraph-3);
   font-weight: 300;
   color: var(--white);
 }
 
+/*Responsive*/
+@media  (max-width: 480px) {
+  .banner{
+    height: 65vh;
+    padding: 0 5%;
+  }
+  .title{
+    width: 100%;
+    font-size: var(--title-4);
+  }
+  .description{
+    display: none;
+  }
+  .description2{
+    width: 100%;
+    font-size: var(--paragraph-2);
+    display: block;
+  }
+  .genres ul{
+    animation-duration: 20s;
+  }
+  .genres li{
+    font-size: var(--title-5);
+  }
+  .steps{
+    padding: 2% 5%;
+  }.stepsWrapper h2{
+    width: 85%;
+    margin-top: 30px;
+    font-size: var(--paragraph-1);
+  }
+  .stepsWrapper .stepsSign{
+    bottom: -40px;
+    font-size: var(--paragraph-4);
+  }
+  .stepsWrapper .stepsContent{
+  margin-top: 20px;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+.stepsContent .stepCard{
+  width: 80%;
+}
+.stepCard .stepIcon{
+  width: 28px;
+  height: 28px;
+}
+}
