--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -27,7 +27,8 @@
   -webkit-text-fill-color: transparent;
   margin-bottom: 30px;
 }
-.description, .description2 {
+.description,
+.description2 {
   width: 80%;
   text-align: center;
   color: var(--white);
@@ -35,7 +36,7 @@
   font-weight: normal;
   margin-bottom: 50px;
 }
-.description2{
+.description2 {
   display: none;
 }
 .cta {
@@ -162,51 +163,102 @@
 }
 
 /*Responsive*/
-@media  (max-width: 480px) {
-  .banner{
-    height: 65vh;
+@media (max-width: 480px) {
+  .banner {
+    height: 63vh;
     padding: 0 5%;
   }
-  .title{
+  .title {
     width: 100%;
     font-size: var(--title-4);
   }
-  .description{
+  .description {
     display: none;
   }
-  .description2{
+  .description2 {
     width: 100%;
     font-size: var(--paragraph-2);
     display: block;
   }
-  .genres ul{
+  .genres ul {
     animation-duration: 20s;
   }
-  .genres li{
+  .genres li {
     font-size: var(--title-5);
   }
-  .steps{
+  .steps {
     padding: 2% 5%;
-  }.stepsWrapper h2{
+  }
+  .stepsWrapper h2 {
     width: 85%;
     margin-top: 30px;
     font-size: var(--paragraph-1);
   }
-  .stepsWrapper .stepsSign{
+  .stepsWrapper .stepsSign {
     bottom: -40px;
     font-size: var(--paragraph-4);
   }
-  .stepsWrapper .stepsContent{
-  margin-top: 20px;
-  flex-direction: column;
-  align-items: center;
-  gap: 50px;
+  .stepsWrapper .stepsContent {
+    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+  .stepsContent .stepCard {
+    width: 80%;
+  }
+  .stepCard .stepIcon {
+    width: 28px;
+    height: 28px;
+  }
 }
-.stepsContent .stepCard{
-  width: 80%;
-}
-.stepCard .stepIcon{
-  width: 28px;
-  height: 28px;
-}
+
+@media (max-width: 844px) and (orientation: landscape) {
+  .banner {
+    height: 100%;
+    padding-top: 40px;
+    padding-bottom: 30px;
+  }
+  .title {
+    width: 100%;
+    font-size: var(--title-3);
+    margin-bottom: 20px;
+  }
+  .description {
+    display: none;
+  }
+  .description2 {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  .genres {
+    height: 30vh;
+  }
+  .genres ul {
+    animation-duration: 20s;
+  }
+  .genres li {
+    font-size: var(--title-5);
+  }
+  
+  .steps {
+    padding: 2% 5%;
+  }
+  .stepsWrapper h2 {
+    width: 85%;
+    margin-top: 10px;
+    font-size: var(--title-5);
+  }
+  .stepsWrapper .stepsSign {
+    bottom: -37px;
+    font-size: var(--paragraph-4);
+  }
+  .stepsWrapper .stepsContent {
+    margin-top: 20px;
+    gap: 15px;
+  }
+  .stepsContent .stepCard {
+    width: 80%;
+  }
 }
