--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 :root {
   --background: #ffffff;
-  --green: #1DB954; 
+  --green: #1db954;
   --white: #f7f7f7;
   --black: #171717;
   --grey: #aeaeae;
@@ -10,7 +10,7 @@
   --paragraph-3: 14px;
   --paragraph-4: 12px;
   --title-1: 56px;
-  --title-2: 48px; 
+  --title-2: 48px;
   --title-3: 36px;
   --title-4: 28px;
   --title-5: 24px;
@@ -21,7 +21,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-html{
+html {
   overflow-y: hidden;
 }
 body {
@@ -36,11 +36,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-a{
+a {
   text-decoration: none;
 }
-
-
 
 * {
   box-sizing: border-box;
@@ -48,28 +46,28 @@ a{
   margin: 0;
 }
 
-.header{
+.header {
   width: 100%;
   display: flex;
   padding: 1% 10%;
 }
-.header .headerWrapper{
+.header .headerWrapper {
   flex: 1;
   display: flex;
   align-items: center;
   padding: 25px 0;
-  border-bottom: .5px solid rgba(174, 174, 174, .1);
+  border-bottom: 0.5px solid rgba(174, 174, 174, 0.1);
 }
-.header .logoWrapper{
+.header .logoWrapper {
   width: 100px;
 }
-.logoWrapper img{
+.logoWrapper img {
   width: 100%;
   height: inherit;
   object-fit: contain;
 }
 
-.header nav{
+.header nav {
   flex: 1;
   display: flex;
   justify-content: end;
@@ -77,16 +75,17 @@ a{
   color: var(--grey);
 }
 
-.header a{
+.header a {
   color: var(--grey);
   font-weight: 400;
   font-size: var(--paragraph-3);
   padding: 6px 8px;
-}.header a:hover{
+}
+.header a:hover {
   color: var(--white);
 }
 
-footer{
+footer {
   width: 100%;
   height: 80px;
   padding: 0;
@@ -94,16 +93,16 @@ footer{
   justify-content: center;
 }
 
-footer .footerWrapper{
+footer .footerWrapper {
   width: 80%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top: .5px solid rgba(174, 174, 174, .1);
+  border-top: 0.5px solid rgba(174, 174, 174, 0.1);
 }
 
-footer p{
+footer p {
   text-align: center;
   color: var(--grey);
   font-size: var(--paragraph-3);
@@ -111,7 +110,16 @@ footer p{
 
 /*Resonsiveness*/
 @media (max-width: 844px) and (orientation: landscape) {
-  .header{
+  .header {
     height: 20vh;
+  }
+}
+
+@media (max-width: 400px) {
+  .header .logoWrapper {
+    width: 80px;
+  }
+  .header a {
+    font-size: var(--paragraph-4);
   }
 }
